--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="30dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,13 +15,13 @@
 
     </TextView>
     <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="150pt"
             android:layout_height="wrap_content"
             android:hint="Input Username"
             android:id="@+id/UsernameTextBox" >
     </EditText>
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="150pt"
         android:layout_height="wrap_content"
         android:hint="Input Password"
         android:id="@+id/PasswordTextBox">
