--- a/app/src/main/res/layout/activity_logout.xml
+++ b/app/src/main/res/layout/activity_logout.xml
@@ -44,10 +44,10 @@
             android:layout_height="wrap_content"
             android:text="No"
             android:textStyle="bold"
-            android:textColor="@color/med_aquamarine"
+            android:textColor="@color/white"
             android:layout_weight="1"
             android:layout_marginHorizontal="15dp"
-            android:background="@drawable/rounded_button_secondary"/>
+            android:backgroundTint="@color/red" />
 
         <Button
             android:id="@+id/button_yes"
@@ -58,7 +58,7 @@
             android:textStyle="bold"
             android:layout_weight="1"
             android:layout_marginHorizontal="15dp"
-            android:background="@drawable/rounded_button_primary"/>
+            android:backgroundTint="@color/med_aquamarine"/>
 
     </LinearLayout>
 
