--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <style name="Theme.RentaBai" parent="android:Theme.Material.Light.NoActionBar" >
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <style name="Theme.RentaBai" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:fontFamily">@font/montserrat</item>
+
+
     </style>
 
 </resources>
